Examples/ProgramLogic/RelationalDerived.lean
/- 
Copyright (c) 2026 Quang Dao. All rights reserved.
Released under Apache 2.0 license as described in the file LICENSE.
Authors: Quang Dao
-/

import VCVio.ProgramLogic.Tactics.Relational

/-!
# Derived Relational Tactic Examples

This file validates relational consequence, inlining, and `@[vcspec]` lookup.
-/

open ENNReal OracleSpec OracleComp
open OracleComp.ProgramLogic
open OracleComp.ProgramLogic.Relational
open Lean.Order
open scoped OracleComp.ProgramLogic

universe u

variable {╬╣ : Type u} {spec : OracleSpec ╬╣}
variable [spec.Fintype] [spec.Inhabited]
variable {╬▒ ╬▓ ╬│ : Type}

/-! ## `rel_conseq` / `rel_inline` / `rel_dist` -/

example {oa : OracleComp spec ╬▒} {ob : OracleComp spec ╬▓}
    {R R' : RelPost ╬▒ ╬▓}
    (h : тЯкoa ~ ob | RтЯл)
    (hpost : тИА x y, R x y тЖТ R' x y) :
    тЯкoa ~ ob | R'тЯл := by
  rel_conseq
  ┬╖ exact h
  ┬╖ exact hpost

example {oa : OracleComp spec ╬▒} {ob : OracleComp spec ╬▓}
    {R R' : RelPost ╬▒ ╬▓}
    (h : тЯкoa ~ ob | RтЯл)
    (hpost : тИА x y, R x y тЖТ R' x y) :
    тЯкoa ~ ob | R'тЯл := by
  rel_conseq with R
  ┬╖ exact h
  ┬╖ exact hpost

private def inlineId (oa : OracleComp spec ╬▒) : OracleComp spec ╬▒ := oa

example (oa : OracleComp spec ╬▒) :
    тЯкinlineId oa ~ oa | EqRel ╬▒тЯл := by
  rel_inline inlineId

/-! ## Registered `@[vcspec]` relational theorems -/

@[irreducible] def wrappedTrueLeft : OracleComp spec Bool := pure true
@[irreducible] def wrappedTrueRight : OracleComp spec Bool := pure true

@[local vcspec] theorem relTriple_wrappedTruePair :
    тЯкwrappedTrueLeft (spec := spec) ~ wrappedTrueRight (spec := spec) | EqRel BoolтЯл := by
  simpa [wrappedTrueLeft, wrappedTrueRight] using
    (relTriple_refl (pure true : OracleComp spec Bool))

example :
    тЯкwrappedTrueLeft (spec := spec) ~ wrappedTrueRight (spec := spec) | EqRel BoolтЯл := by
  rvcstep

example :
    тЯкwrappedTrueLeft (spec := spec) ~ wrappedTrueRight (spec := spec) | fun _ _ => TrueтЯл := by
  rvcstep

@[local vcspec] theorem rawRWP_wrappedTruePair :
    (1 : тДЭтЙе0тИЮ) тКС (Std.Do'.rwp
      (Pred := тДЭтЙе0тИЮ) (EPredтВБ := Std.Do'.EPost.nil) (EPredтВВ := Std.Do'.EPost.nil)
      (wrappedTrueLeft (spec := spec)) (wrappedTrueRight (spec := spec))
      (fun x y => if x = y then (1 : тДЭтЙе0тИЮ) else 0)
      тКетВЧ тКетВЧ) := by
  simpa [wrappedTrueLeft, wrappedTrueRight] using
    (Std.Do'.RelWP.rwp_pure
      (mтВБ := OracleComp spec) (mтВВ := OracleComp spec)
      (Pred := тДЭтЙе0тИЮ) (EPredтВБ := Std.Do'.EPost.nil) (EPredтВВ := Std.Do'.EPost.nil)
      true true (fun x y => if x = y then (1 : тДЭтЙе0тИЮ) else 0)
      тКетВЧ тКетВЧ)

example :
    (1 : тДЭтЙе0тИЮ) тКС (Std.Do'.rwp
      (Pred := тДЭтЙе0тИЮ) (EPredтВБ := Std.Do'.EPost.nil) (EPredтВВ := Std.Do'.EPost.nil)
      (wrappedTrueLeft (spec := spec)) (wrappedTrueRight (spec := spec))
      (fun _ _ => (1 : тДЭтЙе0тИЮ))
      тКетВЧ тКетВЧ) := by
  rvcstep

example :
    тЯкwrappedTrueLeft (spec := spec) ~ wrappedTrueRight (spec := spec) | EqRel BoolтЯл := by
  rvcstep with relTriple_wrappedTruePair

/--
info: Try this:

  [apply] rvcstep with relTriple_wrappedTruePair
-/
#guard_msgs in
example :
    тЯкwrappedTrueLeft (spec := spec) ~ wrappedTrueRight (spec := spec) | EqRel BoolтЯл := by
  rvcstep?

/--
error: rvcstep using hf: the explicit hint did not match the current relational goal shape.
`using` is interpreted by goal shape as one of:
- bind cut relation (`╬▒ тЖТ ╬▓ тЖТ Prop`)
- bind bijection coupling (`╬▒ тЖТ ╬▒`, on synchronized uniform/query binds)
- random/query bijection (`╬▒ тЖТ ╬▒`)
- `List.mapM` / `List.foldlM` input relation
- `simulateQ` state relation

Viable local `using` hints here: `S`
Goal:
  тЯкoaтВБ >>= fтВБ ~ oaтВВ >>= fтВВ | RтЯл
-/
#guard_msgs in
example {oaтВБ oaтВВ : OracleComp spec ╬▒}
    {fтВБ : ╬▒ тЖТ OracleComp spec ╬▓} {fтВВ : ╬▒ тЖТ OracleComp spec ╬│}
    {S : RelPost ╬▒ ╬▒} {R : RelPost ╬▓ ╬│}
    (hoa : тЯкoaтВБ ~ oaтВВ | SтЯл)
    (hf : тИА aтВБ aтВВ, S aтВБ aтВВ тЖТ тЯкfтВБ aтВБ ~ fтВВ aтВВ | RтЯл) :
    тЯкoaтВБ >>= fтВБ ~ oaтВВ >>= fтВВ | RтЯл := by
  rvcstep using hf

/-! ## Relational consequence close -/

example {oa : OracleComp spec ╬▒} {ob : OracleComp spec ╬▓}
    {R R' : RelPost ╬▒ ╬▓}
    (h : тЯкoa ~ ob | RтЯл)
    (hpost : тИА x y, R x y тЖТ R' x y) :
    тЯкoa ~ ob | R'тЯл := by
  rvcgen
